Minor adjustments + README

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "NMS",
-  "name": "NodeMediaServer",
+  "name": "Media Server",
   "icons": [
     {
       "src": "favicon.ico",
